--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -23,8 +23,7 @@ jobs:
 
     - name: Build React App
       run: |
-        cd personal-page
-        npm run build
+        NODE_ENV=production npm run build
 
     - name: Deploy to Server
       uses: appleboy/ssh-action@master
