--- a/cms/src/admin/tsconfig.json
+++ b/cms/src/admin/tsconfig.json
@@ -15,6 +15,6 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["../plugins/**/admin/src/**/*", "./"],
+  "include": ["../plugins/**/admin/src/**/*", "./", "../../vite.config.js"],
   "exclude": ["node_modules/", "build/", "dist/", "**/*.test.ts"]
 }
