--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "dotenv": "^16.4.7",
-    "express": "^4.17.1",
+    "express": "^4.21.2",
     "nodemailer": "^6.9.16",
+    "openai": "^4.79.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
